story 6: reorder previously made order